# APIKEY-king

./: .dockerignore  .env.openrouter  .env.openrouter.example  .env.simple  .env.template  .gitignore  APIKEY-KING_快速使用指南.md  APIKEY-KING_用户使用手册.md  CHANGELOG.md  CLAUDE.md  DOCKER_DEPLOY_GUIDE.md  Dockerfile  ENHANCEMENT_SUMMARY.md  FEATURE_SUMMARY.md  FULL_VALIDATION_GUIDE.md  MODE_SWITCHING_GUIDE.md  OPENROUTER_USAGE.md  PROJECT_CLEANUP_REPORT.md  README.md  SILICONFLOW_INTEGRATION_GUIDE.md  UI.html  USAGE_GUIDE.md  demo_optimizations.py  docker-compose.local.yml  docker-compose.yml  env.example  install.sh  pyproject.toml  queries.example  queries.openrouter.example  queries.openrouter.txt  queries.template  start_openrouter_only.py  test_optimizations.py
.github/workflows/: docker-build.yml
app/: hajimi_king.py
common/: Logger.py  config.py
config/: default.yaml
config/extractors/: deepseek.yaml  gemini.yaml  modelscope.yaml  openrouter.yaml  siliconflow.yaml
config/presets/: gemini-only.env  modelscope-only.env  openrouter-only.env  siliconflow-only.env
config/queries/: deepseek.txt  default.txt  gemini.txt  modelscope.txt  (+2 more)
data/: .gitkeep  apikey.db
frontend/: .eslintrc.cjs  .gitignore  app-optimized.js  app.js  index.html  login.html  package-lock.json  package.json  styles.css  vite.config.ts
scripts/: dry_run.py  migrate.py  quick_launch.py  quick_scan.bat  quick_scan.sh  quick_setup.py
src/: __init__.py  main.py
tests/: __init__.py  conftest.py
utils/: file_manager.py  github_client.py
web/: app-optimized.js  app.js  index.html
(+175 files in other folders)
